--- a/app/views/schedules/_level_explanation.html.erb
+++ b/app/views/schedules/_level_explanation.html.erb
@@ -1,4 +1,4 @@
-<div class="col-xs-5">
+<div class="col-md-5 col-xs-12">
   <div class="row">
     <div class="col-xs-12">
       <div class="panel panel-default">
