--- a/app/views/schedules/edit.html.erb
+++ b/app/views/schedules/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="col-xs-5">
+<div class="col-lg-5 col-md-7 col-xs-12">
   <div class="panel panel-default">
     <div class="panel-heading">
       <h4>Edit Schedule</h4>
