--- a/app/views/admin/clients/_client_details.html.erb
+++ b/app/views/admin/clients/_client_details.html.erb
@@ -1,56 +1,60 @@
-<div class="col-xs-4">
-  <div class="table-responsive">
-    <table class="table table-striped table-bordered table-condensed ">
+<div class="table-responsive">
+  <table class="table table-striped table-bordered table-condensed ">
+    <tr>
+      <td>Name</td>
+      <td><%= @client.name %></td>
+    </tr>
+    <tr>
+      <td>Uname</td>
+      <td><%= @client.uname %></td>
+    </tr>
+    <tr>
+      <td>Active Jobs</td>
+      <td><%= @client.running_jobs %></td>
+    </tr>
+    <tr>
+      <td>Last Backup</td>
+      <td>
+        <%= @client.last_job_date_formatted %>
+      </td>
+    </tr>
+    <tr>
+      <td>File Retention</td>
+      <td><%= @client.file_retention_days %> days</td>
+    </tr>
+    <tr>
+      <td>Job Retention</td>
+      <td><%= @client.job_retention_days %> days</td>
+    </tr>
+    <tr>
+      <td>Total Space Used</td>
+      <td><%= number_to_human_size @client.backup_jobs_size %></td>
+    </tr>
+    <tr>
+      <td>Client Quota</td>
+      <td><%= number_to_human_size @client.quota %></td>
+    </tr>
+    <tr>
+      <td>Space Used %</td>
+      <td>
+        <% if @client.quota.to_f > 0 %>
+          <%= pretty_percentage(@client.backup_jobs_size.to_f / @client.quota, @client.quota) %>
+        <% end %>
+      </td>
+    </tr>
+    <tr>
+      <td>Files count</td>
+      <td><%= number_by_magnitude(@client.files_count) %></td>
+    </tr>
+    <tr>
+      <td>Auto Prune</td>
+      <td><%= @client.auto_prune_human %></td>
+    </tr>
+    <% if @client.host.try(:institutional?) %>
       <tr>
-        <td>Name</td>
-        <td><%= @client.name %></td>
+        <td>Approved by</td>
+        <td><%= @client.host.try(:verifier).try(:username) || 'None' %></td>
       </tr>
-      <tr>
-        <td>Uname</td>
-        <td><%= @client.uname %></td>
-      </tr>
-      <tr>
-        <td>Active Jobs</td>
-        <td><%= @client.running_jobs %></td>
-      </tr>
-      <tr>
-        <td>Last Backup</td>
-        <td>
-          <%= @client.last_job_date_formatted %>
-        </td>
-      </tr>
-      <tr>
-        <td>File Retention</td>
-        <td><%= @client.file_retention_days %> days</td>
-      </tr>
-      <tr>
-        <td>Job Retention</td>
-        <td><%= @client.job_retention_days %> days</td>
-      </tr>
-      <tr>
-        <td>Total Space Used</td>
-        <td><%= number_to_human_size @client.backup_jobs_size %></td>
-      </tr>
-      <tr>
-        <td>Client Quota</td>
-        <td><%= number_to_human_size @client.quota %></td>
-      </tr>
-      <tr>
-        <td>Space Used %</td>
-        <td>
-          <% if @client.quota.to_f > 0 %>
-            <%= pretty_percentage(@client.backup_jobs_size.to_f / @client.quota, @client.quota) %>
-          <% end %>
-        </td>
-      </tr>
-      <tr>
-        <td>Files count</td>
-        <td><%= number_by_magnitude(@client.files_count) %></td>
-      </tr>
-      <tr>
-        <td>Auto Prune</td>
-        <td><%= @client.auto_prune_human %></td>
-      </tr>
-    </table>
-  </div>
+    <% end %>
+  </table>
 </div>
