--- a/app/views/admin/hosts/_host.html.erb
+++ b/app/views/admin/hosts/_host.html.erb
@@ -5,12 +5,16 @@
   <td><%= host.port %></td>
   <td><%= I18n.l(host.created_at, format: :long) %></td>
   <td>
-    <%= link_to 'Verify', verify_admin_host_path(host), method: :post,
-      class: "btn btn-success", role: "button",
-      data: { confirm: "Client #{host.name} will be ready to be dispatched to Bacula" }
-    %>
-    <%= link_to 'Reject', '#', class: "btn btn-danger", role: "button",
-                data: { toggle: 'modal', target: '#reject-modal',
-                        id: host.id, name: host.name } %>
+    <% if host.verified? %>
+      <%= host.try(:verifier).try(:username) || 'None' %>
+    <% else %>
+      <%= link_to 'Verify', verify_admin_host_path(host), method: :post,
+        class: "btn btn-success", role: "button",
+        data: { confirm: "Client #{host.name} will be ready to be dispatched to Bacula" }
+      %>
+      <%= link_to 'Reject', '#', class: "btn btn-danger", role: "button",
+                  data: { toggle: 'modal', target: '#reject-modal',
+                          id: host.id, name: host.name } %>
+    <% end %>
   </td>
 </tr>
