--- a/app/views/admin/hosts/pending.html.erb
+++ b/app/views/admin/hosts/pending.html.erb
@@ -1,24 +1,29 @@
-<h1>Pending Clients</h1>
+<h1 data-toggle="tooltip" title="These clients will receive back ups when the user enters a valid configuration">
+  Pending Clients
+  <small><label class="glyphicon glyphicon-question-sign"></label></small>
+</h1>
 
 <% if @hosts.empty? %>
   <h3>There are no clients waiting for configuration</h3>
 <% else %>
-  <div class="table-responsive">
-    <table class="table table-striped table-bordered table-condensed">
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>FQDN</th>
-          <th>User</th>
-          <th>Port</th>
-          <th>Created At</th>
-          <th>Approved By</th>
-        </tr>
-      </thead>
+  <div class="datatable-wrapper">
+    <div class="table-responsive">
+      <table id="admin_clients" class="table table-striped table-bordered table-condensed">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>FQDN</th>
+            <th>User</th>
+            <th class="neither-search-nor-order">Port</th>
+            <th>Created At</th>
+            <th>Approved By</th>
+          </tr>
+        </thead>
 
-      <tbody>
-        <%= render partial: 'host', collection: @hosts %>
-      </tbody>
-    </table>
+        <tbody>
+          <%= render partial: 'host', collection: @hosts %>
+        </tbody>
+      </table>
+    </div>
   </div>
 <% end %>
