--- a/app/views/shared/_admin.html.erb
+++ b/app/views/shared/_admin.html.erb
@@ -2,19 +2,20 @@
   <%= content_tag(:li, active_class(admin_path)) do %>
     <%= link_to 'Admin', admin_path %>
   <% end %>
-  <%= content_tag(:li, active_class(admin_clients_path)) do %>
-    <%= link_to 'Clients', admin_clients_path %>
-  <% end %>
   <%= content_tag(:li,
                   { class: ['dropdown',
-                             active_class([obsolete_admin_clients_path,
+                            active_class([ admin_clients_path,
+                                           obsolete_admin_clients_path,
                                            unverified_admin_hosts_path,
                                            pending_admin_hosts_path,
                                            rejected_admin_hosts_path])[:class]].join(' ')}) do %>
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-      Inactive Clients <span class="caret"></span>
+      Clients <span class="caret"></span>
     </a>
     <ul class="dropdown-menu">
+      <li>
+        <%= link_to 'Active Clients', admin_clients_path %>
+      </li>
       <li>
         <%= link_to 'Obsolete Clients', obsolete_admin_clients_path %>
       </li>
