Remove logs page from client views.
Logs are only accessible through their jobs.

--- a/app/views/clients/_header.html.erb
+++ b/app/views/clients/_header.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <%= tabs_with Client: client_path(@client), 'Recent Jobs' => jobs_client_path(@client),
-              Stats: stats_client_path(@client), Logs: logs_client_path(@client),
+              Stats: stats_client_path(@client),
               Users: users_client_path(@client) %>
 
 <h2>
